# opencv-windows

./: .gitmodules  README.md  build.ps1  set-env.ps1
opencv_contrib_freetype_patch/: CMakeLists.txt
